force-app/main/default/objects/LEDESClientId__mdt/LEDESClientId__mdt.object-meta.xml
<CustomObject>
    <label>LEDESClientId</label>
    <pluralLabel>LEDESClientIds</pluralLabel>
</CustomObject>