force-app/main/default/objects/LEDESClientId__mdt/fields/LawFirmMatterId__c.field-meta.xml
<CustomField>
    <fullName>LawFirmMatterId__c</fullName>
    <label>LawFirmMatterId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>