force-app/main/default/objects/LEDESClientId__mdt/fields/LineItemExpensesCode__c.field-meta.xml
<CustomField>
    <fullName>LineItemExpensesCode__c</fullName>
    <label>LineItemExpensesCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>