force-app/main/default/objects/LEDESClientId__mdt/fields/MatterId__c.field-meta.xml
<CustomField>
    <fullName>MatterId__c</fullName>
    <label>MatterId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>