force-app/main/default/objects/LEDESClientId__mdt/fields/MatterName__c.field-meta.xml
<CustomField>
    <fullName>MatterName__c</fullName>
    <label>MatterName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>